Closed Bug 202717 Opened 23 years ago Closed 23 years ago

[FIX]Annoying assertion in SetInitialChildList

Categories

(Core :: Layout, defect, P2)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.4beta

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

The problem here is that nsHTMLFrameOuterFrame creates the inner frame in Init() and stores it in its child list... then the SetInitialChildList call comes through after that and nsContainerFrame asserts, since the child list is not empty. Possible fixes: 1) Skip setting initial child list on iframe in ConstructHTMLFrame. 2) Not store the inner frame in the primary list. 3) Don't call SetInitialChildList with null lists. I've gone with #3, since that will assert if we _do_ end up with a nonempty child list for <iframe> for some reason (which I think is desirable).
Attached patch Proposed patchSplinter Review
Priority: -- → P2
Summary: Annoying assertion in SetInitialChildList → [FIX]Annoying assertion in SetInitialChildList
Target Milestone: --- → mozilla1.4beta
Attachment #121138 - Flags: superreview?(dbaron)
Attachment #121138 - Flags: review?(dbaron)
*** Bug 202508 has been marked as a duplicate of this bug. ***
Comment on attachment 121138 [details] [diff] [review] Proposed patch dbaron is away. >1) Skip setting initial child list on iframe in ConstructHTMLFrame. Involve a special-casing (a boolean) that isn't much different from your patch. >2) Not store the inner frame in the primary list. Ripple-effect to recover isn't worth the trouble. >3) Don't call SetInitialChildList with null lists. Hack around, but the alternatives aren't any better, and I am tired of this assert which is of greater annoyance on Windows. r+sr=rbs (Why not keep the comment on its separate line as before.)
Attachment #121138 - Flags: superreview?(dbaron)
Attachment #121138 - Flags: superreview+
Attachment #121138 - Flags: review?(dbaron)
Attachment #121138 - Flags: review+
Fixed.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: