Fix for annoying assert.  Bug 202717, r+sr=rbs